--- a/go/Makefile
+++ b/go/Makefile
@@ -1,4 +1,8 @@
 all: isuumo
 
-isuumo: *.go
-	go build -o isuumo
+isuumo: FORCE
+	GOOS=linux GOARCH=amd64 go build -o isuumo
+	scp isuumo isucon1:~/
+
+FORCE:
+.PHONY: FORCE
